# obs-service-erlang_changes

./: .travis.yml  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
erlang_changes/: __init__.py  cli.py  notes_xml.py  otp_src.py  service_data.py  spec.py
service/: erlang_changes  erlang_changes.service
src/erlang_changes/: __init__.py  changes.py  cli.py  github.py  notes.py  otp_src.py  otp_versions_table.py  spec.py
tests/: __init__.py  notes_xml.py  service_data.py  test_changes.py  test_notes.py  test_otp_versions_table.py
